--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
-	<p>je fais un test</p>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Filmothèque</title>
+	</head>
+	
+	<body>
+		<p>je fais un test</p>
+	</body>
 </html>
