--- a/src/main/resources/templates/detailFilm.html
+++ b/src/main/resources/templates/detailFilm.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="UTF-8">
+		<title>Filmothèque</title>
+	</head>
 
-</body>
+	<body>
+		<table>
+		    <thead>
+		        <tr>
+		            <th> Titre </th>
+		            <th> Année </th>
+		            <th> Genre </th>
+		            <th> Réalisateur </th>
+		            <th> Durée </th>
+		            <th> Acteurs </th>
+		            <th> Synopsis </th>
+		        </tr>
+		    </thead>
+		    <tbody>
+			    <tr>
+		            <td><span th:text="${films.titre}"> </span></td>
+		            <td><span th:text="${films.annee}"> </span></td>
+		            <td><span th:text="${films.genre.libelle}"> </span></td>
+		            <td>
+		            	<span th:text="${films.real.nom}"></span>
+		            	<span th:text="${films.real.prenom}"></span>
+		            </td>
+		            <td><span th:text="${films.duree}"> </span></td>
+		            <td><span th:each="acteur : ${films.acteurs}"> 
+						<span th:text="${acteur.nom}"></span>
+						<span th:text="${acteur.prenom}"></span>					
+					</span></td>
+		            <td><span th:text="${films.synopsis}"> </span></td>
+	        	</tr>
+		    </tbody>
+		</table>
+	</body>
 </html>
