--- a/src/main/resources/templates/films.html
+++ b/src/main/resources/templates/films.html
@@ -40,9 +40,8 @@
 				            <td><span th:each="acteur : ${film.acteurs}"> 
 								<span th:text="${acteur.nom}"></span>
 								<span th:text="${acteur.prenom}"></span><br>				
-							</span></td>
-				            <td><span th:text="${film.synopsis}"> </span></td>
-				            <td><a href="/films/detailFilm/${film.id}">Afficher les détails</a></td>
+							</span></td>				            <td><span th:text="${film.synopsis}"> </span></td>
+				            <td><a th:href="@{/films/detailFilm/{id}(id=${film.id})}">Afficher les détails</a></td>
 			        	</tr>
 				    </tbody>
 				</table>
